# fastapi-mail

./: pyproject.toml
.github/workflows/: deploy-docs.yml  lint.yml  poetry-publish.yml  test.yml
