[project]
name = "fastapi-mail"
version = "1.6.1"
description = "Simple lightweight mail library for FastApi"
authors = [{ name="Sabuhi Shukurov", email="sabuhi.shukurov@gmail.com" }]
license = {text="MIT"}
readme = "README.md"
homepage = "https://github.com/sabuhish/fastapi-mail"
repository = "https://github.com/sabuhish/fastapi-mail"
requires-python = ">=3.10"
dependencies = [
    "starlette (>=0.24,<1.0)",
    "pydantic-settings(>=2.6.1,<3.0.0)",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "typing-extensions>=4.15.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "email-validator>=2.3.0",
    "regex>=2025.11.3",
    "aiosmtplib>=5.0.0",
    "blinker>=1.9.0"
]

[project.optional-dependencies]
httpx = ["httpx"]
redis = ["redis"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mkdocs-material>=9.6.22",
    "fakeredis>=2.32.0",
    "isort>=7.0.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "mkdocs>=1.2",
    "mkdocs-markdownextradata-plugin>=0.2",
    "mypy>=1.4",
    "types-redis>=4.3.21",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "pytest-mock>=3.15.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
py_version=39
skip_glob = [".github/*", ".venv/*", "venv/*", ".vscode/*"]
skip = [".gitignore", ".md", ".yaml", ".yml", ".lock",".toml"]

